<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/holepage"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="2" >
		<ImageView
			android:id="@+id/qweqeqe"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentBottom="true"
			android:scaleType="fitXY"
			android:src="@drawable/actionbar" />
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentRight="true" >
			<ImageButton
				android:id="@+id/back"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@null"
				android:src="@null"
                android:contentDescription="@string/backButton"/>
			<TextView
				android:id="@+id/title"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="3"
				android:gravity="center"
				android:text="@string/braingame"
				android:textColor="#FFFFFF"
				android:textSize="?attr/font_small"
				android:textStyle="bold" />
			<ImageButton
				android:id="@+id/menu"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@null"
				android:src="@null"
                android:contentDescription="@string/menuButton"/>
		</LinearLayout>
	</RelativeLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="20"
		android:orientation="vertical" >
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="vertical"
			android:paddingBottom="20dp"
			android:paddingLeft="20dp"
			android:paddingRight="20dp" >
			<TextView
				android:id="@+id/gameName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/buyer"
				android:textSize="?attr/font_xxlarge" />
			<TextView
				android:id="@+id/textView2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/ranking"
				android:textSize="?attr/font_xlarge" />
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/bg_gamemarksboard"
				android:orientation="vertical" >
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"
					android:gravity="bottom|center" >
					<TextView
						android:id="@+id/textView3"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/lasttime"
						android:textSize="?attr/font_medium" />
					<TextView
						android:id="@+id/qdone"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/questionnumber"
						android:gravity="center"
						android:text="12"
						android:textColor="#ffffff"
						android:textSize="?attr/font_medium" />
					<TextView
						android:id="@+id/textView4"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/num2"
						android:textSize="?attr/font_medium" />
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"
					android:gravity="top|center" >
					<TextView
						android:id="@+id/textView4"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/get"
						android:textSize="?attr/font_medium" />
					<TextView
						android:id="@+id/marks"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="9999"
						android:textSize="?attr/font_medium" />
					<TextView
						android:id="@+id/textView4"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/mark"
						android:textSize="?attr/font_medium" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1.2"
			android:orientation="vertical" >
			<ListView
				android:id="@+id/listView1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:divider="@null"
				android:dividerHeight="20dp" >
			</ListView>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>