<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/holepage"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg"
	android:gravity="center"
	android:orientation="vertical" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="30"
		android:orientation="vertical" >
		<ImageView
			android:id="@+id/imageView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingTop="10dp"
			android:src="@drawable/logo" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="97"
		android:orientation="vertical" >
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1" >
			</LinearLayout>
			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="30"
				android:background="@drawable/registerbg"
				android:orientation="vertical" >
				<TextView
					android:id="@+id/textView1"
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="7"
					android:gravity="top|center"
					android:text="@string/register"
					android:textColor="#FFFFFF"
					android:textSize="25sp" />
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="3"
					android:orientation="vertical" >
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="5"
					android:paddingLeft="10dp"
					android:paddingRight="10dp" >
					<TextView
						android:id="@+id/textView2"
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="3"
						android:text="@string/username"
						android:textSize="20sp"
                        android:labelFor="@+id/userid"
                        android:focusable="true"/>
					<EditText
						android:id="@+id/userid"
						android:layout_width="0dp"
						android:layout_height="32dp"
						android:layout_weight="6"
						android:background="@drawable/inputtextbg"
						android:ems="10"
						android:paddingLeft="5dp">
						<requestFocus />
					</EditText>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="5"
					android:paddingLeft="10dp"
					android:paddingRight="10dp" >
					<TextView
						android:id="@+id/textView2"
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="3"
						android:text="@string/age"
						android:textSize="20sp"
                        android:labelFor="@+id/age"
                        android:focusable="true"/>
					<EditText
						android:id="@+id/age"
						android:layout_width="0dp"
						android:layout_height="32dp"
						android:layout_weight="6"
						android:background="@drawable/inputtextbg"
						android:ems="10"
						android:inputType="number"
						android:paddingLeft="5dp" >
					</EditText>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="3"
					android:orientation="vertical" >
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="10"
					android:paddingLeft="10dp"
					android:paddingRight="10dp" >
					<TextView
						android:id="@+id/textView2"
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="3"
						android:text="@string/gender"
						android:textSize="20sp"
                        android:labelFor="@+id/gender_radio_group"
                        android:focusable="true"/>
					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="32dp"
						android:layout_weight="6"
						android:gravity="center" >
						<RadioGroup
							android:id="@+id/gender_radio_group"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:orientation="horizontal" >
							<RadioButton
								android:id="@+id/boy"
								style="@style/MyRadioButtonStyle"
								android:layout_width="90dp"
								android:layout_height="wrap_content"
								android:button="@drawable/custom_btn_radio"
								android:text="@string/boy"
								android:textSize="20sp"
                                android:contentDescription="@string/boy" />
							<RadioButton
								android:id="@+id/girl"
								style="@style/MyRadioButtonStyle"
								android:layout_width="90dp"
								android:layout_height="wrap_content"
								android:button="@drawable/custom_btn_radio"
								android:text="@string/girl"
								android:textSize="20sp"
                                android:contentDescription="@string/girl" />
						</RadioGroup>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="10"
					android:paddingLeft="10dp"
					android:paddingRight="10dp" >
					<TextView
						android:id="@+id/textView2"
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="3"
						android:text="@string/mode"
						android:textSize="20sp"
                        android:labelFor="@+id/mode_radio_group"
                        android:focusable="true"/>
					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="32dp"
						android:layout_weight="6"
						android:gravity="center" >
						<RadioGroup
							android:id="@+id/mode_radio_group"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:orientation="horizontal" >
							<RadioButton
								android:id="@+id/game"
								style="@style/MyRadioButtonStyle"
								android:layout_width="90dp"
								android:layout_height="wrap_content"
								android:button="@drawable/custom_btn_radio"
								android:text="@string/gamemode"
								android:textSize="20sp"
                                android:contentDescription="@string/gamemode" />
							<RadioButton
								android:id="@+id/full"
								style="@style/MyRadioButtonStyle"
								android:layout_width="90dp"
								android:layout_height="wrap_content"
								android:button="@drawable/custom_btn_radio"
								android:text="@string/fullmode"
								android:textSize="20sp"
                                android:contentDescription="@string/fullmode" />
						</RadioGroup>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="20" >
					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="5" >
					</LinearLayout>
					<Button
						android:id="@+id/reset"
						android:layout_width="0dp"
						android:layout_height="44dp"
						android:layout_weight="19.97"
						android:background="@drawable/btnreset"
						android:gravity="center_vertical|center_horizontal"
						android:paddingLeft="20dp"
						android:text="@string/reset"
						android:textColor="#ffffff" />
					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="5" >
					</LinearLayout>
					<Button
						android:id="@+id/submit"
						android:layout_width="0dp"
						android:layout_height="44dp"
						android:layout_weight="19.96"
						android:background="@drawable/btnsubmit"
						android:paddingLeft="20dp"
						android:text="@string/submit"
						android:textColor="#ffffff" />
					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="5" >
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="6"
					android:orientation="vertical" >
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="vertical" >
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="23"
		android:gravity="center"
		android:orientation="vertical" >
		<Button
			android:id="@+id/back"
			android:layout_width="138dp"
			android:layout_height="50dp"
			android:background="@drawable/btnback"
			android:paddingLeft="20dp"
			android:text="@string/regback" />
	</LinearLayout>
</LinearLayout>